updates to survival codes

--- a/analysis/PCAWG_sig_sig_survivals.Rmd
+++ b/analysis/PCAWG_sig_sig_survivals.Rmd
@@ -144,51 +144,41 @@ negative.sig.sig = read.delim(file = here("supp_data",
 
 
 ```{r}
-# pos.picked.models = get_surv_best_model(positive.sig.sig, 
-#                                  dataset = PCAWG.full.subset.ann,
-#                                  clin.df = PCAWG.clin.df,
-#                                  with.total.muts = TRUE, 
-#                                  tmb.logged = TRUE,
-#                                  binary.status = FALSE)
-# saveRDS(pos.picked.models, file = file.path(out.dir, "pcawg.pos.sig.sig.picked.models.RDS"))
-pos.picked.models.epi = get_surv_best_model(sig.sig.tissues.matrix = positive.sig.sig, 
+pos.picked.models = get_surv_best_model(positive.sig.sig, 
                                  dataset = PCAWG.full.subset.ann,
                                  clin.df = PCAWG.clin.df,
-                                 param.list = list( 
+                                 param.list = list(
                                      "age.at.diagnosis" = c(TRUE, FALSE),
                                      "with.total.muts" = c(TRUE, FALSE), 
                                      "tmb.logged" = c(TRUE),
                                      "binary.status" = c(FALSE),
                                      "epistatic" = c(TRUE, FALSE)),
+                                 filename = here("supp_data/pcawg_positive_sig_sig_survivals.xlsx"),
                                  min.sample.fraction = 0,
-                                filename = here("supp_data/pcawg_positive_sig_sig_survivals.xlsx"),
-                                       rm.non.sig.sheets = TRUE)
-# 
-# pdf(file.path(fig.dir, "PCAWG_positive_interactions_survivals_best.model.pdf"),
-#     onefile = TRUE, width = 6, height = 8)
-# 
-# for (i in 1:length(pos.plotlist) ) {
-#     try({print(pos.plotlist[[i]] ) })
-# }
-# dev.off()
+                                 rm.non.sig.sheets = TRUE,
+                                 return.only.sig = TRUE,
+                                sig.threshold = 0.1)
+
+saveRDS(pos.picked.models, file = file.path(out.dir, "pcawg.pos.sig.sig.picked.models.epi.RDS"))
 
 
 
-saveRDS(pos.picked.models.epi, file = file.path(out.dir, "pcawg.pos.sig.sig.picked.models.epi.RDS"))
+pos.picked.models = get_surv_best_model(positive.sig.sig, 
+                                 dataset = PCAWG.full.subset.ann,
+                                 clin.df = PCAWG.clin.df,
+                                 param.list = list(
+                                     "age.at.diagnosis" = c(TRUE, FALSE),
+                                     "with.total.muts" = c(TRUE, FALSE), 
+                                     "tmb.logged" = c(TRUE),
+                                     "binary.status" = c(FALSE),
+                                     "epistatic" = c(FALSE)),
+                                 filename = here("supp_data/pcawg_positive_sig_sig_survivals_nonepi.xlsx"),
+                                 min.sample.fraction = 0,
+                                 rm.non.sig.sheets = TRUE,
+                                 return.only.sig = TRUE,
+                                 sig.threshold = 0.1)
 
-# pos.picked.models = get_surv_best_model(sig.sig.tissues.matrix = positive.sig.sig, 
-#                                  dataset = PCAWG.full.subset.ann,
-#                                  clin.df = PCAWG.clin.df,
-#                                  param.list = list(
-#                                      "age.at.diagnosis" = c(TRUE, FALSE),
-#                                      "with.total.muts" = c(TRUE, FALSE), 
-#                                      "tmb.logged" = c(TRUE),
-#                                      "binary.status" = c(TRUE, FALSE),
-#                                      "epistatic" = c(FALSE)),
-#                                  min.sample.fraction = 0)
-# 
-# saveRDS(pos.picked.models, file = file.path(out.dir, "pcawg.pos.sig.sig.picked.models.RDS"))
-# pos.picked.models %>% HR_summary_for_all(type = "pos") %>% plot_sigint_forest()
+saveRDS(pos.picked.models, file = file.path(out.dir, "pcawg.pos.sig.sig.picked.models.nonepi.RDS"))
 ```
 
 
@@ -285,36 +275,41 @@ saveRDS(pos.picked.models.epi, file = file.path(out.dir, "pcawg.pos.sig.sig.pick
 <!-- ``` -->
 
 ```{r}
-neg.picked.models.epi = get_surv_best_model(sig.sig.tissues.matrix = negative.sig.sig, 
+neg.picked.models = get_surv_best_model(negative.sig.sig, 
                                  dataset = PCAWG.full.subset.ann,
                                  clin.df = PCAWG.clin.df,
-                                 param.list = list( 
+                                 param.list = list(
                                      "age.at.diagnosis" = c(TRUE, FALSE),
                                      "with.total.muts" = c(TRUE, FALSE), 
                                      "tmb.logged" = c(TRUE),
                                      "binary.status" = c(FALSE),
                                      "epistatic" = c(TRUE, FALSE)),
-                                 min.sample.fraction = 0,
                                  filename = here("supp_data/pcawg_negative_sig_sig_survivals.xlsx"),
-                                       rm.non.sig.sheets = TRUE,
-                                 return.only.sig = TRUE)
+                                 min.sample.fraction = 0,
+                                 rm.non.sig.sheets = TRUE,
+                                 return.only.sig = TRUE,
+                                sig.threshold = 0.1)
 
-saveRDS(neg.picked.models.epi, file = file.path(out.dir, "pcawg.neg.sig.sig.picked.models.epi.RDS"))
+saveRDS(neg.picked.models, file = file.path(out.dir, "pcawg.neg.sig.sig.picked.models.epi.RDS"))
 
-# neg.picked.models = get_surv_best_model(sig.sig.tissues.matrix = negative.sig.sig, 
-#                                  dataset = PCAWG.full.subset.ann,
-#                                  clin.df = PCAWG.clin.df,
-#                                  param.list = list(
-#                                      "age.at.diagnosis" = c(TRUE, FALSE),
-#                                      "with.total.muts" = c(TRUE, FALSE), 
-#                                      "tmb.logged" = c(TRUE),
-#                                      "binary.status" = c(TRUE, FALSE),
-#                                      "epistatic" = c(FALSE)),
-#                                  min.sample.fraction = 0)
-# 
-# saveRDS(neg.picked.models, file = file.path(out.dir, "pcawg.neg.sig.sig.picked.models.RDS"))
 
-# neg.picked.models %>% HR_summary_for_all(type = "neg") %>% plot_sigint_forest()
+
+neg.picked.models = get_surv_best_model(negative.sig.sig, 
+                                 dataset = PCAWG.full.subset.ann,
+                                 clin.df = PCAWG.clin.df,
+                                 param.list = list(
+                                     "age.at.diagnosis" = c(TRUE, FALSE),
+                                     "with.total.muts" = c(TRUE, FALSE), 
+                                     "tmb.logged" = c(TRUE),
+                                     "binary.status" = c(FALSE),
+                                     "epistatic" = c(FALSE)),
+                                 filename = here("supp_data/pcawg_negative_sig_sig_survivals_nonepi.xlsx"),
+                                 min.sample.fraction = 0,
+                                 rm.non.sig.sheets = TRUE,
+                                 return.only.sig = TRUE,
+                                 sig.threshold = 0.1)
+
+saveRDS(neg.picked.models, file = file.path(out.dir, "pcawg.neg.sig.sig.picked.models.nonepi.RDS"))
 ```
 
 ### Specific interactions
