--- a/analysis/PCAWG_sig_pathways_survivals.Rmd
+++ b/analysis/PCAWG_sig_pathways_survivals.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(comment = '', fig.width = 6,
 library(here)
 library(survival)
 library(survminer)
-
+library(nonnestcox)
 source(here("R/load_packages.R"))
 library(gridExtra)
 
@@ -68,72 +68,72 @@ negative.sig.pathway = read.delim(file = here("supp_data",
 
 ### Survival models for positive interactions
 
-```{r}
-pos.plotlist = get_surv_plotlist(positive.sig.pathway, 
-                                 dataset = PCAWG.path.sig.aggregate,
-                                 clin.df = PCAWG.clin.df,
-                                 with.total.muts = TRUE, 
-                                 tmb.logged = TRUE,
-                                 binary.status = FALSE )
+<!-- ```{r} -->
+<!-- pos.plotlist = get_surv_plotlist(positive.sig.pathway,  -->
+<!--                                  dataset = PCAWG.path.sig.aggregate, -->
+<!--                                  clin.df = PCAWG.clin.df, -->
+<!--                                  with.total.muts = TRUE,  -->
+<!--                                  tmb.logged = TRUE, -->
+<!--                                  binary.status = FALSE ) -->
 
-pdf(file.path(fig.dir, "PCAWG_positive_interactions_survivals_totmut_nonbinary.pdf"),
-    onefile = TRUE, width = 6, height = 8)
+<!-- pdf(file.path(fig.dir, "PCAWG_positive_interactions_survivals_totmut_nonbinary.pdf"), -->
+<!--     onefile = TRUE, width = 6, height = 8) -->
 
-for (i in 1:length(pos.plotlist) ) {
-    try({print(pos.plotlist[[i]] ) })
-}
-dev.off()
-
-
-pos.plotlist = get_surv_plotlist(positive.sig.pathway, 
-                                 dataset = PCAWG.path.sig.aggregate,
-                                 clin.df = PCAWG.clin.df,
-                                 with.total.muts = FALSE, 
-                                 binary.status = FALSE )
-
-pdf(file.path(fig.dir, "PCAWG_positive_interactions_survivals_nontotmut_nonbinary.pdf"),
-    onefile = TRUE, width = 6, height = 8)
-
-for (i in 1:length(pos.plotlist) ) {
-    try({print(pos.plotlist[[i]] ) })
-}
-dev.off()
+<!-- for (i in 1:length(pos.plotlist) ) { -->
+<!--     try({print(pos.plotlist[[i]] ) }) -->
+<!-- } -->
+<!-- dev.off() -->
 
 
-pos.plotlist = get_surv_plotlist(positive.sig.pathway, 
-                                 dataset = PCAWG.path.sig.aggregate,
-                                 clin.df = PCAWG.clin.df,
-                                 with.total.muts = TRUE, 
-                                 tmb.logged = TRUE,
-                                 binary.status = TRUE )
+<!-- pos.plotlist = get_surv_plotlist(positive.sig.pathway,  -->
+<!--                                  dataset = PCAWG.path.sig.aggregate, -->
+<!--                                  clin.df = PCAWG.clin.df, -->
+<!--                                  with.total.muts = FALSE,  -->
+<!--                                  binary.status = FALSE ) -->
 
-pdf(file.path(fig.dir, "PCAWG_positive_interactions_survivals_totmut_binary.pdf"),
-    onefile = TRUE, width = 6, height = 8)
+<!-- pdf(file.path(fig.dir, "PCAWG_positive_interactions_survivals_nontotmut_nonbinary.pdf"), -->
+<!--     onefile = TRUE, width = 6, height = 8) -->
 
-for (i in 1:length(pos.plotlist) ) {
-    try({print(pos.plotlist[[i]] ) })
-}
-dev.off()
-```
-
-```{r}
-pos.coxlist = get_surv_coxlist(positive.sig.pathway, 
-                                 dataset = PCAWG.path.sig.aggregate,
-                                 clin.df = PCAWG.clin.df,
-                                 with.total.muts = TRUE, 
-                               tmb.logged = TRUE,
-                                 binary.status = FALSE )
-saveRDS(pos.coxlist, file = file.path(out.dir, "pos.coxlist.totmut.nonbinary.RDS"))
+<!-- for (i in 1:length(pos.plotlist) ) { -->
+<!--     try({print(pos.plotlist[[i]] ) }) -->
+<!-- } -->
+<!-- dev.off() -->
 
 
-pos.coxlist = get_surv_coxlist(positive.sig.pathway, 
-                                 dataset = PCAWG.path.sig.aggregate,
-                                 clin.df = PCAWG.clin.df,
-                                 with.total.muts = FALSE, 
-                               tmb.logged = TRUE,
-                                 binary.status = FALSE )
-saveRDS(pos.coxlist, file = file.path(out.dir, "pos.coxlist.nototmut.nonbinary.RDS"))
-```
+<!-- pos.plotlist = get_surv_plotlist(positive.sig.pathway,  -->
+<!--                                  dataset = PCAWG.path.sig.aggregate, -->
+<!--                                  clin.df = PCAWG.clin.df, -->
+<!--                                  with.total.muts = TRUE,  -->
+<!--                                  tmb.logged = TRUE, -->
+<!--                                  binary.status = TRUE ) -->
+
+<!-- pdf(file.path(fig.dir, "PCAWG_positive_interactions_survivals_totmut_binary.pdf"), -->
+<!--     onefile = TRUE, width = 6, height = 8) -->
+
+<!-- for (i in 1:length(pos.plotlist) ) { -->
+<!--     try({print(pos.plotlist[[i]] ) }) -->
+<!-- } -->
+<!-- dev.off() -->
+<!-- ``` -->
+
+<!-- ```{r} -->
+<!-- pos.coxlist = get_surv_coxlist(positive.sig.pathway,  -->
+<!--                                  dataset = PCAWG.path.sig.aggregate, -->
+<!--                                  clin.df = PCAWG.clin.df, -->
+<!--                                  with.total.muts = TRUE,  -->
+<!--                                tmb.logged = TRUE, -->
+<!--                                  binary.status = FALSE ) -->
+<!-- saveRDS(pos.coxlist, file = file.path(out.dir, "pos.coxlist.totmut.nonbinary.RDS")) -->
+
+
+<!-- pos.coxlist = get_surv_coxlist(positive.sig.pathway,  -->
+<!--                                  dataset = PCAWG.path.sig.aggregate, -->
+<!--                                  clin.df = PCAWG.clin.df, -->
+<!--                                  with.total.muts = FALSE,  -->
+<!--                                tmb.logged = TRUE, -->
+<!--                                  binary.status = FALSE ) -->
+<!-- saveRDS(pos.coxlist, file = file.path(out.dir, "pos.coxlist.nototmut.nonbinary.RDS")) -->
+<!-- ``` -->
 
 
 ```{r}
@@ -141,85 +141,109 @@ pos.picked.models = get_surv_best_model(positive.sig.pathway,
                                  dataset = PCAWG.path.sig.aggregate,
                                  clin.df = PCAWG.clin.df,
                                  param.list = list(
+                                     "age.at.diagnosis" = c(TRUE, FALSE),
                                      "with.total.muts" = c(TRUE, FALSE), 
                                      "tmb.logged" = c(TRUE),
-                                     "binary.status" = c(TRUE, FALSE),
+                                     "binary.status" = c(FALSE),
                                      "epistatic" = c(TRUE, FALSE)),
-                                 min.sample.fraction = 0)
-
+                                 filename = here("supp_data/pcawg_positive_sig_path_survivals.xlsx"),
+                                 min.sample.fraction = 0,
+                                 rm.non.sig.sheets = TRUE,
+                                 return.only.sig = TRUE,
+                                sig.threshold = 0.1)
 
 saveRDS(pos.picked.models, file = file.path(out.dir, "pcawg.pos.sig.path.picked.models.epi.RDS"))
+
+
+
+pos.picked.models = get_surv_best_model(positive.sig.pathway, 
+                                 dataset = PCAWG.path.sig.aggregate,
+                                 clin.df = PCAWG.clin.df,
+                                 param.list = list(
+                                     "age.at.diagnosis" = c(TRUE, FALSE),
+                                     "with.total.muts" = c(TRUE, FALSE), 
+                                     "tmb.logged" = c(TRUE),
+                                     "binary.status" = c(FALSE),
+                                     "epistatic" = c(FALSE)),
+                                 filename = here("supp_data/pcawg_positive_sig_path_survivals_nonepi.xlsx"),
+                                 min.sample.fraction = 0,
+                                 rm.non.sig.sheets = TRUE,
+                                 return.only.sig = TRUE,
+                                 sig.threshold = 0.1)
+
+saveRDS(pos.picked.models, file = file.path(out.dir, "pcawg.pos.sig.path.picked.models.nonepi.RDS"))
+
 ```
 
 ### Survival models for negative interactions
 
-```{r}
-neg.plotlist = get_surv_plotlist(negative.sig.pathway, 
-                                 dataset = PCAWG.path.sig.aggregate,
-                                 clin.df = PCAWG.clin.df,
-                                 with.total.muts = TRUE, 
-                                 tmb.logged = TRUE,
-                                 binary.status = FALSE )
+<!-- ```{r} -->
+<!-- neg.plotlist = get_surv_plotlist(negative.sig.pathway,  -->
+<!--                                  dataset = PCAWG.path.sig.aggregate, -->
+<!--                                  clin.df = PCAWG.clin.df, -->
+<!--                                  with.total.muts = TRUE,  -->
+<!--                                  tmb.logged = TRUE, -->
+<!--                                  binary.status = FALSE ) -->
 
-pdf(file.path(fig.dir, "PCAWG_negative_interactions_survivals_totmut_nonbinary.pdf"),
-    onefile = TRUE, width = 6, height = 8)
+<!-- pdf(file.path(fig.dir, "PCAWG_negative_interactions_survivals_totmut_nonbinary.pdf"), -->
+<!--     onefile = TRUE, width = 6, height = 8) -->
 
-for (i in 1:length(neg.plotlist) ) {
-    try({print(neg.plotlist[[i]] ) })
-}
-dev.off()
-
-
-neg.plotlist = get_surv_plotlist(negative.sig.pathway, 
-                                 dataset = PCAWG.path.sig.aggregate,
-                                 clin.df = PCAWG.clin.df,
-                                 with.total.muts = FALSE, 
-                                 binary.status = FALSE )
-
-pdf(file.path(fig.dir, "PCAWG_negative_interactions_survivals_nontotmut_nonbinary.pdf"),
-    onefile = TRUE, width = 6, height = 8)
-
-for (i in 1:length(neg.plotlist) ) {
-    try({print(neg.plotlist[[i]] ) })
-}
-dev.off()
+<!-- for (i in 1:length(neg.plotlist) ) { -->
+<!--     try({print(neg.plotlist[[i]] ) }) -->
+<!-- } -->
+<!-- dev.off() -->
 
 
-neg.plotlist = get_surv_plotlist(negative.sig.pathway, 
-                                 dataset = PCAWG.path.sig.aggregate,
-                                 clin.df = PCAWG.clin.df,
-                                 with.total.muts = TRUE, 
-                                 tmb.logged = TRUE,
-                                 binary.status = TRUE )
+<!-- neg.plotlist = get_surv_plotlist(negative.sig.pathway,  -->
+<!--                                  dataset = PCAWG.path.sig.aggregate, -->
+<!--                                  clin.df = PCAWG.clin.df, -->
+<!--                                  with.total.muts = FALSE,  -->
+<!--                                  binary.status = FALSE ) -->
 
-pdf(file.path(fig.dir, "PCAWG_negative_interactions_survivals_totmut_binary.pdf"),
-    onefile = TRUE, width = 6, height = 8)
+<!-- pdf(file.path(fig.dir, "PCAWG_negative_interactions_survivals_nontotmut_nonbinary.pdf"), -->
+<!--     onefile = TRUE, width = 6, height = 8) -->
 
-for (i in 1:length(neg.plotlist) ) {
-    try({print(neg.plotlist[[i]] ) })
-}
-dev.off()
-```
+<!-- for (i in 1:length(neg.plotlist) ) { -->
+<!--     try({print(neg.plotlist[[i]] ) }) -->
+<!-- } -->
+<!-- dev.off() -->
 
 
-```{r}
-neg.coxlist = get_surv_coxlist(negative.sig.pathway, 
-                                 dataset = PCAWG.path.sig.aggregate,
-                                 clin.df = PCAWG.clin.df,
-                                 with.total.muts = TRUE, 
-                               tmb.logged = TRUE,
-                                 binary.status = FALSE )
-saveRDS(neg.coxlist, file = file.path(out.dir, "neg.coxlist.totmut.nonbinary.RDS"))
+<!-- neg.plotlist = get_surv_plotlist(negative.sig.pathway,  -->
+<!--                                  dataset = PCAWG.path.sig.aggregate, -->
+<!--                                  clin.df = PCAWG.clin.df, -->
+<!--                                  with.total.muts = TRUE,  -->
+<!--                                  tmb.logged = TRUE, -->
+<!--                                  binary.status = TRUE ) -->
+
+<!-- pdf(file.path(fig.dir, "PCAWG_negative_interactions_survivals_totmut_binary.pdf"), -->
+<!--     onefile = TRUE, width = 6, height = 8) -->
+
+<!-- for (i in 1:length(neg.plotlist) ) { -->
+<!--     try({print(neg.plotlist[[i]] ) }) -->
+<!-- } -->
+<!-- dev.off() -->
+<!-- ``` -->
 
 
-neg.coxlist = get_surv_coxlist(negative.sig.pathway, 
-                                 dataset = PCAWG.path.sig.aggregate,
-                                 clin.df = PCAWG.clin.df,
-                                 with.total.muts = FALSE, 
-                               tmb.logged = TRUE,
-                                 binary.status = FALSE )
-saveRDS(neg.coxlist, file = file.path(out.dir, "neg.coxlist.nototmut.nonbinary.RDS"))
-```
+<!-- ```{r} -->
+<!-- neg.coxlist = get_surv_coxlist(negative.sig.pathway,  -->
+<!--                                  dataset = PCAWG.path.sig.aggregate, -->
+<!--                                  clin.df = PCAWG.clin.df, -->
+<!--                                  with.total.muts = TRUE,  -->
+<!--                                tmb.logged = TRUE, -->
+<!--                                  binary.status = FALSE ) -->
+<!-- saveRDS(neg.coxlist, file = file.path(out.dir, "neg.coxlist.totmut.nonbinary.RDS")) -->
+
+
+<!-- neg.coxlist = get_surv_coxlist(negative.sig.pathway,  -->
+<!--                                  dataset = PCAWG.path.sig.aggregate, -->
+<!--                                  clin.df = PCAWG.clin.df, -->
+<!--                                  with.total.muts = FALSE,  -->
+<!--                                tmb.logged = TRUE, -->
+<!--                                  binary.status = FALSE ) -->
+<!-- saveRDS(neg.coxlist, file = file.path(out.dir, "neg.coxlist.nototmut.nonbinary.RDS")) -->
+<!-- ``` -->
 
 
 ```{r}
@@ -227,12 +251,38 @@ neg.picked.models = get_surv_best_model(negative.sig.pathway,
                                  dataset = PCAWG.path.sig.aggregate,
                                  clin.df = PCAWG.clin.df,
                                  param.list = list(
+                                     "age.at.diagnosis" = c(TRUE, FALSE),
                                      "with.total.muts" = c(TRUE, FALSE), 
                                      "tmb.logged" = c(TRUE),
-                                     "binary.status" = c(TRUE, FALSE),
+                                     "binary.status" = c(FALSE),
                                      "epistatic" = c(TRUE, FALSE)),
-                                 min.sample.fraction = 0)
+                                 filename = here("supp_data/pcawg_negative_sig_path_survivals.xlsx"),
+                                 min.sample.fraction = 0,
+                                 rm.non.sig.sheets = TRUE,
+                                 return.only.sig = TRUE,
+                                sig.threshold = 0.1)
+
 saveRDS(neg.picked.models, file = file.path(out.dir, "pcawg.neg.sig.path.picked.models.epi.RDS"))
+
+
+
+neg.picked.models = get_surv_best_model(negative.sig.pathway, 
+                                 dataset = PCAWG.path.sig.aggregate,
+                                 clin.df = PCAWG.clin.df,
+                                 param.list = list(
+                                     "age.at.diagnosis" = c(TRUE, FALSE),
+                                     "with.total.muts" = c(TRUE, FALSE), 
+                                     "tmb.logged" = c(TRUE),
+                                     "binary.status" = c(FALSE),
+                                     "epistatic" = c(FALSE)),
+                                 filename = here("supp_data/pcawg_negative_sig_path_survivals_nonepi.xlsx"),
+                                 min.sample.fraction = 0,
+                                 rm.non.sig.sheets = TRUE,
+                                 return.only.sig = TRUE,
+                                 sig.threshold = 0.1)
+
+saveRDS(neg.picked.models, file = file.path(out.dir, "pcawg.neg.sig.path.picked.models.nonepi.RDS"))
+
 ```
 
 
