--- a/analysis/TCGA_sig_pathways_survivals.Rmd
+++ b/analysis/TCGA_sig_pathways_survivals.Rmd
@@ -148,96 +148,142 @@ pos.picked.models = get_surv_best_model(positive.sig.pathway,
                                      "tmb.logged" = c(TRUE),
                                      "binary.status" = c(FALSE),
                                      "epistatic" = c(TRUE, FALSE)),
-                                 filename = here("supp_data/tcga_negative_sig_path_survivals.xlsx"),
+                                 filename = here("supp_data/tcga_positive_sig_path_survivals.xlsx"),
                                  min.sample.fraction = 0,
                                  rm.non.sig.sheets = TRUE,
-                                 return.only.sig = TRUE)
+                                 return.only.sig = TRUE,
+                                sig.threshold = 0.1)
 
 saveRDS(pos.picked.models, file = file.path(out.dir, "tcga.pos.sig.path.picked.models.epi.RDS"))
+
+
+
+pos.picked.models = get_surv_best_model(positive.sig.pathway, 
+                                 dataset = TCGA.path.sig.aggregate,
+                                 clin.df = TCGA.clin.df,
+                                 param.list = list(
+                                     "age.at.diagnosis" = c(TRUE, FALSE),
+                                     "with.total.muts" = c(TRUE, FALSE), 
+                                     "tmb.logged" = c(TRUE),
+                                     "binary.status" = c(FALSE),
+                                     "epistatic" = c(FALSE)),
+                                 filename = here("supp_data/tcga_positive_sig_path_survivals_nonepi.xlsx"),
+                                 min.sample.fraction = 0,
+                                 rm.non.sig.sheets = TRUE,
+                                 return.only.sig = TRUE,
+                                 sig.threshold = 0.1)
+
+saveRDS(pos.picked.models, file = file.path(out.dir, "tcga.pos.sig.path.picked.models.nonepi.RDS"))
 ```
 
 ### Survival models for negative interactions
 
-```{r}
-neg.plotlist = get_surv_plotlist(sig.sig.tissues.matrix = negative.sig.pathway, 
-                                 dataset = TCGA.path.sig.aggregate,
-                                 clin.df = TCGA.clin.df,
-                                 with.total.muts = TRUE, 
-                                 tmb.logged = TRUE,
-                                 binary.status = FALSE )
+<!-- ```{r} -->
+<!-- neg.plotlist = get_surv_plotlist(sig.sig.tissues.matrix = negative.sig.pathway,  -->
+<!--                                  dataset = TCGA.path.sig.aggregate, -->
+<!--                                  clin.df = TCGA.clin.df, -->
+<!--                                  with.total.muts = TRUE,  -->
+<!--                                  tmb.logged = TRUE, -->
+<!--                                  binary.status = FALSE ) -->
 
-pdf(file.path(fig.dir, "TCGA_negative_interactions_survivals_totmut_nonbinary.pdf"),
-    onefile = TRUE, width = 6, height = 8)
+<!-- pdf(file.path(fig.dir, "TCGA_negative_interactions_survivals_totmut_nonbinary.pdf"), -->
+<!--     onefile = TRUE, width = 6, height = 8) -->
 
-for (i in 1:length(neg.plotlist) ) {
-    try({print(neg.plotlist[[i]] ) })
-}
-dev.off()
-
-
-neg.plotlist = get_surv_plotlist(negative.sig.pathway, 
-                                 dataset = TCGA.path.sig.aggregate,
-                                 clin.df = TCGA.clin.df,
-                                 with.total.muts = FALSE, 
-                                 binary.status = FALSE )
-
-pdf(file.path(fig.dir, "TCGA_negative_interactions_survivals_nontotmut_nonbinary.pdf"),
-    onefile = TRUE, width = 6, height = 8)
-
-for (i in 1:length(neg.plotlist) ) {
-    try({print(neg.plotlist[[i]] ) })
-}
-dev.off()
+<!-- for (i in 1:length(neg.plotlist) ) { -->
+<!--     try({print(neg.plotlist[[i]] ) }) -->
+<!-- } -->
+<!-- dev.off() -->
 
 
-neg.plotlist = get_surv_plotlist(negative.sig.pathway, 
-                                 dataset = TCGA.path.sig.aggregate,
-                                 clin.df = TCGA.clin.df,
-                                 with.total.muts = TRUE, 
-                                 tmb.logged = TRUE,
-                                 binary.status = TRUE )
+<!-- neg.plotlist = get_surv_plotlist(negative.sig.pathway,  -->
+<!--                                  dataset = TCGA.path.sig.aggregate, -->
+<!--                                  clin.df = TCGA.clin.df, -->
+<!--                                  with.total.muts = FALSE,  -->
+<!--                                  binary.status = FALSE ) -->
 
-pdf(file.path(fig.dir, "TCGA_negative_interactions_survivals_totmut_binary.pdf"),
-    onefile = TRUE, width = 6, height = 8)
+<!-- pdf(file.path(fig.dir, "TCGA_negative_interactions_survivals_nontotmut_nonbinary.pdf"), -->
+<!--     onefile = TRUE, width = 6, height = 8) -->
 
-for (i in 1:length(neg.plotlist) ) {
-    try({print(neg.plotlist[[i]] ) })
-}
-dev.off()
-```
-
-```{r}
-neg.coxlist = get_surv_coxlist(negative.sig.pathway, 
-                                 dataset = TCGA.path.sig.aggregate,
-                                 clin.df = TCGA.clin.df,
-                                 with.total.muts = TRUE, 
-                                 tmb.logged = TRUE,
-                                 binary.status = FALSE)
-
-saveRDS(neg.coxlist, file = file.path(out.dir, "neg.coxlist.totmut.nonbinary.RDS"))
+<!-- for (i in 1:length(neg.plotlist) ) { -->
+<!--     try({print(neg.plotlist[[i]] ) }) -->
+<!-- } -->
+<!-- dev.off() -->
 
 
-neg.coxlist = get_surv_coxlist(negative.sig.pathway, 
-                                 dataset = TCGA.path.sig.aggregate,
-                                 clin.df = TCGA.clin.df,
-                                 with.total.muts = FALSE, 
-                                 tmb.logged = TRUE,
-                                 binary.status = FALSE)
+<!-- neg.plotlist = get_surv_plotlist(negative.sig.pathway,  -->
+<!--                                  dataset = TCGA.path.sig.aggregate, -->
+<!--                                  clin.df = TCGA.clin.df, -->
+<!--                                  with.total.muts = TRUE,  -->
+<!--                                  tmb.logged = TRUE, -->
+<!--                                  binary.status = TRUE ) -->
 
-saveRDS(neg.coxlist, file = file.path(out.dir, "neg.coxlist.nototmut.nonbinary.RDS"))
-```
+<!-- pdf(file.path(fig.dir, "TCGA_negative_interactions_survivals_totmut_binary.pdf"), -->
+<!--     onefile = TRUE, width = 6, height = 8) -->
+
+<!-- for (i in 1:length(neg.plotlist) ) { -->
+<!--     try({print(neg.plotlist[[i]] ) }) -->
+<!-- } -->
+<!-- dev.off() -->
+<!-- ``` -->
+
+<!-- ```{r} -->
+<!-- neg.coxlist = get_surv_coxlist(negative.sig.pathway,  -->
+<!--                                  dataset = TCGA.path.sig.aggregate, -->
+<!--                                  clin.df = TCGA.clin.df, -->
+<!--                                  with.total.muts = TRUE,  -->
+<!--                                  tmb.logged = TRUE, -->
+<!--                                  binary.status = FALSE) -->
+
+<!-- saveRDS(neg.coxlist, file = file.path(out.dir, "neg.coxlist.totmut.nonbinary.RDS")) -->
+
+
+<!-- neg.coxlist = get_surv_coxlist(negative.sig.pathway,  -->
+<!--                                  dataset = TCGA.path.sig.aggregate, -->
+<!--                                  clin.df = TCGA.clin.df, -->
+<!--                                  with.total.muts = FALSE,  -->
+<!--                                  tmb.logged = TRUE, -->
+<!--                                  binary.status = FALSE) -->
+
+<!-- saveRDS(neg.coxlist, file = file.path(out.dir, "neg.coxlist.nototmut.nonbinary.RDS")) -->
+<!-- ``` -->
 
 ```{r}
 neg.picked.models = get_surv_best_model(negative.sig.pathway, 
                                  dataset = TCGA.path.sig.aggregate,
                                  clin.df = TCGA.clin.df,
                                  param.list = list(
+                                     "age.at.diagnosis" = c(TRUE, FALSE),
                                      "with.total.muts" = c(TRUE, FALSE), 
                                      "tmb.logged" = c(TRUE),
-                                     "binary.status" = c(TRUE, FALSE),
+                                     "binary.status" = c(FALSE),
                                      "epistatic" = c(TRUE, FALSE)),
-                                 min.sample.fraction = 0)
+                                 filename = here("supp_data/tcga_negative_sig_path_survivals.xlsx"),
+                                 min.sample.fraction = 0,
+                                 rm.non.sig.sheets = TRUE,
+                                 return.only.sig = TRUE,
+                                sig.threshold = 0.1)
+
 saveRDS(neg.picked.models, file = file.path(out.dir, "tcga.neg.sig.path.picked.models.epi.RDS"))
+
+
+
+neg.picked.models = get_surv_best_model(negative.sig.pathway, 
+                                 dataset = TCGA.path.sig.aggregate,
+                                 clin.df = TCGA.clin.df,
+                                 param.list = list(
+                                     "age.at.diagnosis" = c(TRUE, FALSE),
+                                     "with.total.muts" = c(TRUE, FALSE), 
+                                     "tmb.logged" = c(TRUE),
+                                     "binary.status" = c(FALSE),
+                                     "epistatic" = c(FALSE)),
+                                 filename = here("supp_data/tcga_negative_sig_path_survivals_nonepi.xlsx"),
+                                 min.sample.fraction = 0,
+                                 rm.non.sig.sheets = TRUE,
+                                 return.only.sig = TRUE,
+                                 sig.threshold = 0.1)
+
+saveRDS(neg.picked.models, file = file.path(out.dir, "tcga.neg.sig.path.picked.models.nonepi.RDS"))
+
 ```
 
 ### TCGA survival for specific interactions 
